# kay

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
examples/simple_browser/: Cargo.toml  index.html  index.js  package-lock.json  package.json
examples/simple_browser/src/: main.rs
examples/simple_common/: Cargo.toml
examples/simple_common/src/: lib.rs
examples/simple_common/src/counter/: kay_auto.rs  mod.rs
examples/simple_server/: Cargo.toml
examples/simple_server/src/: main.rs
src/: actor.rs  actor_system.rs  external.rs  id.rs  inbox.rs  instance_store.rs  lib.rs  messaging.rs  networking.rs  storage_aware.rs  swarm.rs  tuning.rs  type_registry.rs
src/class/: inbox.rs  mod.rs
src/class/instance_store/: mod.rs  slot_map.rs
