[package]
name = "kay"
description = "Experimental high-performance actor system framework for Rust"
version = "0.2.9"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/kay"
license = "MIT"
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1"
chunky = "0.1.1"
compact = "0.2.4"
compact_macros = "0.1.0"
url = "1.7.0"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}

[dependencies.tungstenite]
version = "0.5.3"
optional = true

[dependencies.stdweb]
version = "0.4.7"
optional = true

[features]
default = ["server"]
server = ["tungstenite"]
browser = ["stdweb"]
serde-serialization = ["serde", "serde_derive"]