[package]
name = "kay"
description = "Experimental high-performance actor system framework for Rust"
version = "0.4.10"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/kay"
license = "MIT"
edition = "2018"
[badges]
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1"
chunky = "0.3.7"
compact = "0.2.13"
compact_macros = "0.1.0"
url ="1.7.2"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}

[dependencies.tungstenite]
version = "0.5.3"
optional = true
default-features = false

[dependencies.stdweb]
version = "0.4.7"
optional = true

[features]
default = ["server"]
server = ["tungstenite", "chunky/mmap"]
browser = ["stdweb"]
serde-serialization = ["serde", "serde_derive"]